--- a/CourtCounter/app/src/main/res/layout/activity_main.xml
+++ b/CourtCounter/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,13 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorMainBackground"
+    android:background="@drawable/background"
     tools:context="com.example.android.courtcounter.MainActivity">
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,33 +29,16 @@
 
                 <TextView
                     android:id="@+id/team_a_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:gravity="center_horizontal"
-                    android:text="@string/teamA"
-                    android:textColor="#000000"
-                    android:textSize="36sp" />
+                    style="@style/team_name_style"
+                    android:text="@string/teamA" />
 
                 <TextView
-                    android:id="@+id/team_a_score"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center_horizontal"
-                    android:text="0"
-                    android:textColor="#000000"
-                    android:textSize="56sp" />
+                    android:id="@+id/score_display_team1"
+                    style="@style/score_display_style" />
 
                 <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:onClick="addScoreForTeamA"
-                    android:text="Score"
-                    android:textAllCaps="true" />
+                    android:id="@+id/score_button_team1"
+                    style="@style/score_button_style" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -66,24 +47,15 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:onClick="redCardForTeamA"
-                        android:text="Red Card"
-                        android:textAllCaps="true" />
+                        android:id="@+id/red_button_team1"
+                        style="@style/card_button_style"
+                        android:text="@string/red_button" />
 
                     <TextView
-                        android:id="@+id/team_a_red"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="0"
-                        android:textSize="34sp" />
-                </LinearLayout>
+                        android:id="@+id/red_display_team1"
+                        style="@style/card_display_style" />
 
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -92,32 +64,23 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:onClick="yellowCardForTeamA"
-                        android:text="Yellow Card"
-                        android:textAllCaps="true" />
+                        android:id="@+id/yellow_button_team1"
+                        style="@style/card_button_style"
+                        android:text="@string/yellow_button" />
 
                     <TextView
-                        android:id="@+id/team_a_yellow"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="0"
-                        android:textSize="34sp" />
-                </LinearLayout>
+                        android:id="@+id/yellow_display_team1"
+                        style="@style/card_display_style" />
 
+                </LinearLayout>
 
             </LinearLayout>
 
             <View
-                android:layout_width="1dp"
+                android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@android:color/darker_gray"></View>
-
+                android:background="@color/colorTextPrimary">
+            </View>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -128,33 +91,16 @@
 
                 <TextView
                     android:id="@+id/team_b_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:gravity="center_horizontal"
-                    android:text="@string/teamB"
-                    android:textColor="#000000"
-                    android:textSize="36sp" />
+                    style="@style/team_name_style"
+                    android:text="@string/teamB" />
 
                 <TextView
-                    android:id="@+id/team_b_score"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="center_horizontal"
-                    android:text="0"
-                    android:textColor="#000000"
-                    android:textSize="56sp" />
+                    android:id="@+id/score_display_team2"
+                    style="@style/score_display_style" />
 
                 <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:onClick="addScoreForTeamB"
-                    android:text="Score"
-                    android:textAllCaps="true" />
+                    android:id="@+id/score_button_team2"
+                    style="@style/score_button_style" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -163,22 +109,13 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/team_b_red"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="0"
-                        android:textSize="34sp" />
+                        android:id="@+id/red_display_team2"
+                        style="@style/card_display_style" />
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:onClick="redCardForTeamB"
-                        android:text="Red Card"
-                        android:textAllCaps="true" />
+                        android:id="@+id/red_button_team2"
+                        style="@style/card_button_style"
+                        android:text="@string/red_button" />
 
                 </LinearLayout>
 
@@ -189,22 +126,13 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/team_b_yellow"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="0"
-                        android:textSize="34sp" />
+                        android:id="@+id/yellow_display_team2"
+                        style="@style/card_display_style" />
 
                     <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:onClick="yellowCardForTeamB"
-                        android:text="Yellow Card"
-                        android:textAllCaps="true" />
+                        android:id="@+id/yellow_button_team2"
+                        style="@style/card_button_style"
+                        android:text="@string/yellow_button" />
 
                 </LinearLayout>
 
@@ -212,33 +140,28 @@
 
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/colorTextPrimary">
+        </View>
+
         <LinearLayout
+            android:id="@+id/game_control_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:orientation="vertical">
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:onClick="endGame"
-                android:text="End Game" />
-
-            <TextView
-                android:id="@+id/winner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:textSize="20dp"
-                android:textColor="#000000"
-                android:text=""/>
+                android:id="@+id/end_game_button"
+                style="@style/game_control_style"
+                android:text="@string/end_game" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:onClick="resetPoints"
-                android:text="New Game" />
+                android:id="@+id/reset_button"
+                style="@style/game_control_style"
+                android:text="@string/new_game" />
 
         </LinearLayout>
 
