--- a/CourtCounter/app/src/main/res/values/colors.xml
+++ b/CourtCounter/app/src/main/res/values/colors.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFF3E0</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#FFEBEE</color>
+    <color name="colorPrimaryDark">#558B2F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorTextPrimary">#FFF3E0</color>
 </resources>
