--- a/CourtCounter/app/src/main/res/values/styles.xml
+++ b/CourtCounter/app/src/main/res/values/styles.xml
@@ -5,33 +5,33 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorButtonNormal">@color/colorTextPrimary</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
     </style>
 
     <style name="team_name_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">16dp</item>
+        <item name="android:layout_marginBottom">@dimen/margin_large</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:textColor">@color/colorTextPrimary</item>
-        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="score_display_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">24dp</item>
+        <item name="android:layout_marginBottom">@dimen/margin_extra_large</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:text">0</item>
-        <item name="android:textColor">@color/colorTextPrimary</item>
-        <item name="android:textSize">56sp</item>
+        <item name="android:text">@string/default_score_values</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">@dimen/text_size_large</item>
     </style>
 
     <style name="score_button_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_marginBottom">@dimen/margin_medium</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:text">Score</item>
     </style>
@@ -49,15 +49,15 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
-        <item name="android:text">0</item>
-        <item name="android:textColor">@color/colorTextPrimary</item>
-        <item name="android:textSize">34dp</item>
+        <item name="android:text">@string/default_card_values</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
     </style>
 
     <style name="game_control_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:layout_margin">4dp</item>
+        <item name="android:layout_margin">@dimen/margin_small</item>
     </style>
 </resources>
