--- a/FriendsQuiz/app/src/main/res/values/dimens.xml
+++ b/FriendsQuiz/app/src/main/res/values/dimens.xml
@@ -1,12 +1,7 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="question_margin">16dp</dimen>
-    <dimen name="answer_margin">16dp</dimen>
-    <dimen name="input_field_margin">16dp</dimen>
-    <dimen name="logo_margin">16dp</dimen>
+    <dimen name="result_message_margin">16dp</dimen>
 
-    <dimen name="results_text_view_margin">8dp</dimen>
+    <dimen name="default_margin">16dp</dimen>
 </resources>
