--- a/CourtCounter/app/src/main/res/layout/activity_main.xml
+++ b/CourtCounter/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
             <View
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
-                android:background="@color/colorTextPrimary">
+                android:background="@color/colorPrimary">
             </View>
 
             <LinearLayout
@@ -143,7 +143,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/colorTextPrimary">
+            android:background="@color/colorPrimary">
         </View>
 
         <LinearLayout
