--- a/FriendsQuiz/app/src/main/res/layout/results_layout.xml
+++ b/FriendsQuiz/app/src/main/res/layout/results_layout.xml
@@ -22,10 +22,13 @@
 
         <TextView
             android:id="@+id/points_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/points"
-            style="@style/pointStyle"/>
+            android:text="@string/result_message"
+            style="@style/ResultMessageStyle"/>
+
+        <Button
+            android:id="@+id/start_new_game"
+            style="@style/ButtonStyle"
+            android:text="@string/start_new_game_button"/>
 
     </LinearLayout>
 
