--- a/FriendsQuiz/app/src/main/res/values/colors.xml
+++ b/FriendsQuiz/app/src/main/res/values/colors.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0277BD</color>
+    <color name="colorPrimaryLight">#0288D1</color>
+    <color name="colorAccent">#FFEB3B</color>
     <color name="colorBackground">@android:color/white</color>
 
     <color name="colorQuestion">@android:color/black</color>
     <color name="colorAnswer">@android:color/black</color>
-    <color name="falseAnwser">@android:color/holo_red_light</color>
-    <color name="correctAnwser">@android:color/holo_green_light</color>
+
+    <color name="answer1_background">#E1F5FE</color>
+    <color name="answer2_background">#B3E5FC</color>
+    <color name="answer3_background">#81D4FA</color>
+    <color name="answer4_background">#4FC3F7</color>
 </resources>
