--- a/FriendsQuiz/app/src/main/res/values/strings_main.xml
+++ b/FriendsQuiz/app/src/main/res/values/strings_main.xml
@@ -4,11 +4,22 @@
     <string name="welcome_message">Welcome to the Friends Quiz! Are you ready for the challenge?</string>
     <string name="start_button">Start</string>
     <string name="error_message">"Please select your answer"</string>
-    <string name="points">You have <xliff:g id="points" example="1">%d</xliff:g> points</string>
+    <string name="result_message">You earned <xliff:g id="points" example="1">%d</xliff:g> points</string>
     <string name="correct_a">Correct</string>
     <string name="false_a">False</string>
     <string name="results_text"><xliff:g id="results" example="\nQuestion \nAnswer \nCorrect">%s</xliff:g></string>
     <string name="results_header">Final results</string>
-    <string name="results_toast">Congratulations!</string>
+    <string name="results_toast">Congratulations! You earned <xliff:g id="points" example="1">%d</xliff:g> points</string>
+    <string name="start_new_game_button">Start new game</string>
+    <string name="new_game_toast">New game has started</string>
 
+    <string name="sample_question">Question</string>
+    <string name="sample_answer1">Answer1</string>
+    <string name="sample_answer2">Answer2</string>
+    <string name="sample_answer3">Answer3</string>
+    <string name="sample_answer4">Answer4</string>
+
+    <string name="answer_hint">Type your answer here</string>
+
+    <string name="next_button">Next</string>
 </resources>
