--- a/CourtCounter/app/src/main/res/values/dimens.xml
+++ b/CourtCounter/app/src/main/res/values/dimens.xml
@@ -8,6 +8,8 @@
     <dimen name="margin_large">16dp</dimen>
     <dimen name="margin_extra_large">24dp</dimen>
 
+    <dimen name="divider">2dp</dimen>
+
     <dimen name="text_size_medium">36sp</dimen>
     <dimen name="text_size_large">56sp</dimen>
 </resources>
