--- a/FriendsQuiz/app/src/main/res/values/dimens.xml
+++ b/FriendsQuiz/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
 
-    <dimen name="result_message_margin">16dp</dimen>
+    <dimen name="small_margin">8dp</dimen>
+    <dimen name="medium_margin">16dp</dimen>
+    <dimen name="large_margin">24dp</dimen>
 
-    <dimen name="default_margin">16dp</dimen>
+    <dimen name="large_text_size">24sp</dimen>
+
 </resources>
